# SDLTemplateProject

./: .gitignore  CMakeLists.txt  SDL_Plotter.cpp  SDL_Plotter.h  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
