cmake_minimum_required(VERSION 3.14)
project(Project)

set(CMAKE_CXX_STANDARD 17)

##THIS IS WHERE THE FIND.cmake FILES ARE
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
##THIS IS WHERE ALL SDL PACKAGES ARE INSTALLED
set(SDL2_PATH "C:/SDL") ##THIS MUST BE SET ON WINDOWS

##THESE USE THE CMAKE FILES TO FIND THE SDL2 PACKAGES
find_package(SDL2 REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)

##DIRECTORIES FOR SDL INCLUDES GO HERE
include_directories(${SDL2_INCLUDE_DIR}
        ${SDL2_MIXER_INCLUDE_DIR}
        ${SDL2_IMAGE_INCLUDE_DIR}
        ${SDL2_TTF_INCLUDE_DIR}
        )

##ADD SOURCE FILES HERE
add_executable(Project main.cpp SDL_Plotter.h SDL_Plotter.cpp)

##AFTER EXECUTABLE IS ADDED, LINK THE SDL LIBRARIES
target_link_libraries(Project ${SDL2_LIBRARY}
        ${SDL2_IMAGE_LIBRARIES}
        ${SDL2_TTF_LIBRARIES}
        ${SDL2_MIXER_LIBRARIES}
        )